<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewColor"
    tools:context=".ui.MoviesDetailActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGrey"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/poster_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/blur_poster_image"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gradient_one"
            android:contentDescription="@string/gradient_back" />

    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transBlackHigh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <io.supercharge.shimmerlayout.ShimmerLayout
            android:id="@+id/shimmer_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_animation_duration="1200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/poster_image"
                        android:layout_width="@dimen/_120dp"
                        android:layout_height="@dimen/_160dp"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_16dp"
                        android:background="@drawable/rounded_corner_white"
                        android:contentDescription="@string/movie_poster_image"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/title_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_16dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:layout_toStartOf="@+id/rating"
                        android:layout_toEndOf="@+id/poster_image"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_18" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_txt"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:layout_toStartOf="@+id/rating"
                        android:layout_toEndOf="@+id/poster_image"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_15" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/genre"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:layout_toStartOf="@+id/rating"
                        android:layout_toEndOf="@+id/poster_image"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_15" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_16dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:drawableStart="@drawable/ic_tomato"
                        android:drawablePadding="@dimen/_8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_15"
                        android:visibility="invisible" />

                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/actor"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <TextView
                    android:id="@+id/actor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/director"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/plot"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <TextView
                    android:id="@+id/plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/production"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <TextView
                    android:id="@+id/production"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_15" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/box_office"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <TextView
                    android:id="@+id/box_office"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_48dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_15" />


            </LinearLayout>

        </io.supercharge.shimmerlayout.ShimmerLayout>


    </ScrollView>

    <include
        layout="@layout/error_state"
        android:id="@+id/error_layout_detail"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageButton
        android:id="@+id/fab_bookmark"
        android:layout_width="@dimen/_56dp"
        android:layout_height="@dimen/_56dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_48dp"
        android:visibility="visible"
        android:scaleType="centerInside"
        android:elevation="@dimen/_4dp"
        android:background="@drawable/circular_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/bookmark" />


</androidx.constraintlayout.widget.ConstraintLayout>